Add autenticação para Pf e Pj, e ajustes de rotas
