# src/controllers/auth.controller.js
@@ -6,21 +6,21 @@ const loginPessoaJuridica = async (req, res) =>
     const{ email, password } = req.body;
 
     try{
-        const user = await loginServicePessoaJuridica(email); //busca o usuário no servidor pelo email
+        const pessoajuridica = await loginServicePessoaJuridica(email); //busca o usuário no servidor pelo email
 
         //verifica se o usuário ou a senha estão ok
-        if (!user) {
+        if (!pessoajuridica) {
             return res.status(404).send({message: "Usuário ou senha incorreto"})
         }
 
-        const passwordIsValid = bcrypt.compareSync(password, user.password)
+        const passwordIsValid = bcrypt.compareSync(password, pessoajuridica.password)
 
         if (!passwordIsValid) {
             return res.status(400).send({message: "Usuário ou senha incorreto"})
 
         }
 
-        const token = generateToken(user.id)
+        const token = generateToken(pessoajuridica.id)
 
         res.send({token})
     }catch(err){
@@ -34,21 +34,21 @@ const loginPessoaFisica = async (req, res) =>
     const{ email, password } = req.body;
 
     try{
-        const user = await loginServicePessoaFisica(email); //busca o usuário no servidor pelo email
+        const pessoafisica = await loginServicePessoaFisica(email); //busca o usuário no servidor pelo email
 
         //verifica se o usuário ou a senha estão ok
-        if (!user) {
+        if (!pessoafisica) {
             return res.status(404).send({message: "Usuário ou senha incorreto"})
         }
 
-        const passwordIsValid = bcrypt.compareSync(password, user.password)
+        const passwordIsValid = bcrypt.compareSync(password, pessoafisica.password)
 
         if (!passwordIsValid) {
             return res.status(400).send({message: "Usuário ou senha incorreto"})
 
         }
 
-        const token = generateToken(user.id)
+        const token = generateToken(pessoafisica.id)
 
         res.send({token})
     }catch(err){
